--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3,7 +3,7 @@ body{
     padding: 5%;
     overflow-x: hidden;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    background-image: url("../imgs/me3.jpg");
+    background-image: url("../imgs/pic03.jpg");
     background-attachment: fixed;
     background-position-x: center;
     background-repeat: no-repeat;
@@ -69,7 +69,6 @@ body{
                 -3px -3px 10px black;
     border-radius: 5%;
 }
-
 .row{
     width: 300px;
     height: 300px;
@@ -77,7 +76,7 @@ body{
     align-items: center;
     justify-content: center;
     margin: 10% auto;
-    color: #122742;
+    color: midnightblue;
     padding: 1%;
     border-radius: 50%;
     text-transform: uppercase;
@@ -88,4 +87,46 @@ body{
                 0px 0px 1000px 10px white;
     text-shadow: 0px 0px 4px white;
     filter: blur(0px);
+}
+@media only screen and (max-width: 450px ){
+    .row{
+        width: 150px;
+        height: 150px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin: 10% auto;
+        color: midnightblue;
+        padding: 1%;
+        border-radius: 50%;
+        text-transform: uppercase;
+        font-size: 24;
+        box-shadow: 1px 1px 100px 10px black inset,
+                    0px 0px 200px 7px orange,
+                    0px 0px 500px 10px orangered,
+                    0px 0px 1000px 10px white;
+        text-shadow: 0px 0px 4px white;
+        filter: blur(0px);
+    }
+}
+@media only screen and (max-width: 768px){
+    .row{
+        width: 200px;
+        height: 200px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin: 10% auto;
+        color: midnightblue;
+        padding: 1%;
+        border-radius: 50%;
+        text-transform: uppercase;
+        font-size: 32;
+        box-shadow: 1px 1px 100px 10px black inset,
+                    0px 0px 200px 7px orange,
+                    0px 0px 500px 10px orangered,
+                    0px 0px 1000px 10px white;
+        text-shadow: 0px 0px 4px white;
+        filter: blur(0px);
+    }
 }
