--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -130,3 +130,24 @@ body{
         filter: blur(0px);
     }
 }
+@media only screen and (min-width: 992px){
+    .row{
+        width: 300px;
+        height: 300px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin: 10% auto;
+        color: midnightblue;
+        padding: 1%;
+        border-radius: 50%;
+        text-transform: uppercase;
+        font-size: 48;
+        box-shadow: 1px 1px 100px 10px black inset,
+                    0px 0px 200px 7px orange,
+                    0px 0px 500px 10px orangered,
+                    0px 0px 1000px 10px white;
+        text-shadow: 0px 0px 4px white;
+        filter: blur(0px);
+    }
+}
